--- a/www/index.html
+++ b/www/index.html
@@ -59,8 +59,9 @@ function onBackKeyDown()
 
 <body>
     <div class="app" >
-        <h1>n33dz.com</h1>
         <div id="deviceready" class="blink">
+            <img src="img/Iogo.png">
+            <h1>n33dz.com</h1>
             <p class="event listening">Loading.....</p>
             <p class="event received">Loading ........</p>
         
